# autolex

./: .dockerignore  .gitignore  Dockerfile  README.md  public_key.pub  pyproject.toml  ruff.toml  uwsgi.yaml
autolex/: __init__.py  wsgi.py
autolex/classes/: autotask.py  lexware.py
